# adaptive-model-orchestrator

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml
docs/research/: 2026-04-13-moa-refinements.md  2026-04-13-multi-model-research.md
models/router-classifier/: training_data.json
scripts/: generate_charts.py  quick_bench.py  render_charts.sh  run_benchmarks.py  setup_models.py  train_router.py
scripts/animations/: orchestrator.html
scripts/charts/: 01_hero.html  02_benchmarks.html  03_architecture.html  04_research.html  05_v2_comparison.html
src/: types.py
src/benchmarks/: harness_adapter.py  metrics.py  runner.py
src/dashboard/: index.html
src/models/: api.py  base.py  local.py  registry.py
src/orchestrator/: aggregator.py  analyzer.py  cascade.py  decomposer.py  escalation.py  executor.py  moa.py  pipeline.py  router.py
tests/: conftest.py  test_aggregator.py  test_analyzer.py  test_api.py  test_base.py  test_cascade.py  test_decomposer.py  test_escalation.py  test_executor.py  test_harness_adapter.py  test_integration.py  test_local.py  test_metrics.py  test_moa.py  test_pipeline.py  test_registry.py  test_router.py  test_types.py
