[project]
name = "model-orchestrator"
version = "0.1.0"
description = "Intelligent multi-model orchestration system"
requires-python = ">=3.11"
dependencies = [
    "mlx-lm>=0.19",
    "litellm>=1.30",
    "lm-eval>=0.4",
    "transformers>=4.40",
    "datasets>=2.19",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
